# auto_api

./: .gitignore  Cars.py  Dealers.py  Deals.py  README.md  handle_data.py  json_datas.py  jsonschema_get_carid.py  jsonschema_get_cars.py  jsonschema_get_deals.py  jsonschema_post_requests.py  main.py  pyproject.toml
migrations/versions/: 277681a20329_.py  3018bd94b3cc_.py  37b86e0c6819_.py  3ed7dd81fb12_.py  7a204e9f6c67_.py  b153c90e59cf_.py  cf90d4c5e4a8_.py
tests/: json_datas.py
