[tool.poetry]
name = "auto_api"
version = "0.1.0"
description = "REST API for cars market"
authors = ["AleksandraV <am.amsti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
SQLAlchemy = "^1.4.35"
migrate = "^0.3.8"
Flask-Migrate = "^3.1.0"
psycopg2-binary = "^2.9.3"
Werkzeug = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
